2004-10-25  Andrew Pinski  <pinskia@physics.uc.edu>

PR middle-end/17407
        * c-decl.c (grokdeclarator) <case cdk_array>: Remove the call
        layout_type as it is already done by build_array_type.
        * tree.c (build_array_type): Layout the type even

2004-10-25  Andrew Pinski  <pinskia@physics.uc.edu>

        PR c++/18121
        * decl.c (grokdeclarator) <case cdk_array>: Remove the call
        layout_type as it is already done by create_array_type_for_decl.

2004-10-25  Andrew Pinski  <pinskia@physics.uc.edu>

        PR middle-end/17407
        * gcc.c-torture/compile/pr17407.c: New test.

        PR c++/18121
        * g++.dg/template/array8.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@89533 138bc75d-0d04-0410-961f-82ee72b054a4